<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".Activity.TicketActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_white" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_black"
                    android:text="Ticket Detail"
                    android:textColor="@color/darkBlue"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/backBtn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_bg"
                android:layout_margin="24dp"

                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_margin="16dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="110dp"
                        android:layout_height="30dp"
                        android:background="@drawable/light_purple_bg"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/upcoming_trip"
                        android:textColor="@color/black"
                        android:textStyle="bold"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Order ID:2311102210"
                        android:fontFamily="sans-serif-light"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_margin="16dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/roundedCorner"
                    android:id="@+id/pic"
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/titleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="@string/title"
                    android:textColor="@color/darkBlue"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Show this ticker to your guide before departure."
                    android:fontFamily="@font/urbanist"
                    android:textSize="12sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/darkBlue"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/guestTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="0"
                        android:fontFamily="@font/urbanist"
                        android:textStyle="bold"
                        android:textColor="@color/darkBlue"
                        app:layout_constraintStart_toStartOf="@+id/textView21"
                        app:layout_constraintTop_toBottomOf="@+id/textView21" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/urbanist_medium"
                        android:text="@string/total_guest"
                        android:textStyle="bold"
                        android:textColor="@color/darkBlue"
                        app:layout_constraintStart_toStartOf="@+id/textView20"
                        app:layout_constraintTop_toBottomOf="@+id/textView20" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/urbanist"
                        android:text="0"
                        android:textColor="@color/darkBlue"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/timeTxt"
                        app:layout_constraintTop_toBottomOf="@+id/timeTxt" />

                    <TextView
                        android:id="@+id/timeTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="48dp"
                        android:fontFamily="@font/urbanist_medium"
                        android:text="@string/time"
                        android:textColor="@color/darkBlue"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/durationTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="-"
                        android:fontFamily="@font/urbanist"
                        android:textColor="@color/darkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView17" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/urbanist_medium"
                        android:text="@string/tip_duration"
                        android:textColor="@color/darkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/timeTxtTourGuideTxt" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanist_medium"
                        android:layout_marginTop="16dp"
                        android:text="@string/tour_guide"
                        android:textColor="@color/darkBlue"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/timeTxtTourGuideTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/urbanist"
                        android:text="-"
                        android:textColor="@color/darkBlue"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView16" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="329dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/stroke_bg"
                    android:padding="12dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/profile"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/roundedFullCorner"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/urbanist_medium"
                        android:text="Tour Guide"
                        android:textColor="@color/darkBlue"

                        app:layout_constraintStart_toEndOf="@+id/profile"
                        app:layout_constraintTop_toTopOf="@+id/profile" />

                    <TextView
                        android:id="@+id/tourGuideNameTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanist_bold"
                        android:text="Name"
                        android:textColor="@color/darkBlue"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/profile"
                        app:layout_constraintStart_toStartOf="@+id/textView23" />

                    <ImageView
                        android:id="@+id/messageBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/callBtn"
                        app:layout_constraintEnd_toStartOf="@+id/callBtn"
                        app:layout_constraintTop_toTopOf="@+id/callBtn"
                        app:srcCompat="@drawable/message" />

                    <ImageView
                        android:id="@+id/callBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/profile"
                        app:srcCompat="@drawable/call" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/dash_line" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/barcode" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@android:style/Widget.Button"
                    android:layout_margin="16dp"
                    android:background="@drawable/purple_bg"
                    android:textColor="@color/white"
                    android:textSize="20sp"

                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/download_ticket" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>